using CollegeLMS.API.Entities;
using Microsoft.EntityFrameworkCore;

namespace CollegeLMS.API.Data;

public class AppDbContext(DbContextOptions<AppDbContext> options) : DbContext(options)
{
    static AppDbContext()
    {
        AppContext.SetSwitch("Npgsql.EnableLegacyTimestampBehavior", true);
    }

    public DbSet<User> Users => Set<User>();
    public DbSet<Group> Groups => Set<Group>();
    public DbSet<Teacher> Teachers => Set<Teacher>();
    public DbSet<Student> Students => Set<Student>();
    public DbSet<Course> Courses => Set<Course>();
    public DbSet<Lesson> Lessons => Set<Lesson>();
    public DbSet<CourseMaterial> CourseMaterials => Set<CourseMaterial>();
    public DbSet<CourseDocument> CourseDocuments => Set<CourseDocument>();
    public DbSet<News> News => Set<News>();
    public DbSet<NewsCategory> NewsCategories => Set<NewsCategory>();
    public DbSet<ScheduleEntry> ScheduleEntries => Set<ScheduleEntry>();
    public DbSet<ScheduleHistory> ScheduleHistory => Set<ScheduleHistory>();
    public DbSet<Feedback> Feedbacks => Set<Feedback>();
    public DbSet<Test> Tests => Set<Test>();
    public DbSet<TestQuestion> TestQuestions => Set<TestQuestion>();
    public DbSet<TestAssignment> TestAssignments => Set<TestAssignment>();
    public DbSet<TestAttempt> TestAttempts => Set<TestAttempt>();
    public DbSet<TestAnswer> TestAnswers => Set<TestAnswer>();
    public DbSet<Specialty> Specialties => Set<Specialty>();
    public DbSet<CourseGroup> CourseGroups => Set<CourseGroup>();
    public DbSet<CourseAuthor> CourseAuthors => Set<CourseAuthor>();
    public DbSet<TransferRecord> TransferRecords => Set<TransferRecord>();
    public DbSet<ImportJob> ImportJobs => Set<ImportJob>();
    public DbSet<Favorite> Favorites => Set<Favorite>();
    public DbSet<NotificationSettings> NotificationSettings => Set<NotificationSettings>();
    public DbSet<DispatcherCredential> DispatcherCredentials => Set<DispatcherCredential>();
    public DbSet<CorrectionConfirmation> CorrectionConfirmations => Set<CorrectionConfirmation>();
    public DbSet<CorrectionBatch> CorrectionBatches => Set<CorrectionBatch>();
    public DbSet<CorrectionPosition> CorrectionPositions => Set<CorrectionPosition>();
    public DbSet<BellSlot> BellSlots => Set<BellSlot>();
    public DbSet<BigBreak> BigBreaks => Set<BigBreak>();
    public DbSet<NonWorkingDay> NonWorkingDays => Set<NonWorkingDay>();
    public DbSet<ScheduleInsert> ScheduleInserts => Set<ScheduleInsert>();
    public DbSet<Practice> Practices => Set<Practice>();

    protected override void OnModelCreating(ModelBuilder modelBuilder)
    {
        base.OnModelCreating(modelBuilder);
        modelBuilder.ApplyConfigurationsFromAssembly(typeof(AppDbContext).Assembly);

        foreach (var entityType in modelBuilder.Model.GetEntityTypes())
        {
            if (!typeof(Entity).IsAssignableFrom(entityType.ClrType))
                continue;

            var builder = modelBuilder.Entity(entityType.ClrType);
            builder
                .Property(nameof(Entity.CreatedAt))
                .HasColumnType("timestamp with time zone")
                .HasDefaultValueSql("CURRENT_TIMESTAMP");
            builder
                .Property(nameof(Entity.UpdatedAt))
                .HasColumnType("timestamp with time zone")
                .HasDefaultValueSql("CURRENT_TIMESTAMP");
        }
    }
}
