@startuml
!theme plain
title Виды расписания (день, неделя, календарь месяца, семестр) — Class

interface IScheduleViewService {
  + GetDayAsync(groupId?, teacherId?, room?, date?, ct): Result<ScheduleDayViewResponse>
  + GetWeekAsync(groupId?, teacherId?, room?, week?, date?, ct): Result<ScheduleWeekViewResponse>
  + GetSemesterAsync(groupId?, teacherId?, ct): Result<ScheduleSemesterViewResponse>
  + GetMonthAsync(groupId?, teacherId?, room?, month?, ct): Result<ScheduleMonthViewResponse>
}

class ScheduleViewService {
  - db: AppDbContext
  - bells: IBellScheduleService
  - practices: IPracticeService
  - inserts: IScheduleInsertService
  + GetDayAsync(...): Result<ScheduleDayViewResponse>
  + GetWeekAsync(...): Result<ScheduleWeekViewResponse>
  + GetSemesterAsync(...): Result<ScheduleSemesterViewResponse>
  + GetMonthAsync(...): Result<ScheduleMonthViewResponse>
  - LoadRangeAsync(groupId?, teacherId?, room?, from, to, ct): ScheduleRangeData
  - BuildDay(data, target, week): ScheduleDayViewResponse
  - BuildEntries(data, target, week): List<ScheduleResponse>
  - GetMonthEntriesAsync(groupId?, teacherId?, room?, ct): List<ScheduleEntry>
  .. приоритет слоёв дня ..
  Воскресенье: isSunday, всё пусто
  Нерабочий: isNonWorking + nonWorkingTitle, всё пусто
  Вне семестра: пустой день
  Практика: practices[], entries/inserts пусты
  Обычный день: inserts[] + entries[] (звонки, бейджи)
}

class ScheduleChangeTags <<static>> {
  + BuildAsync(db, items, week?, ct): Task<Dictionary<(Guid,DayOfWeek,int), List<ChangeTag>>>
  .. дедупликация Add + Remove одной недели ..
}

class StudyWeek <<static>> {
  + SemesterStart: DateTime = 01.09.2026
  + TotalWeeks: int = 16
  + MondayOf(date): DateTime
  + WeekOf(date): int
  + ForDate(date): int
  + IsInSemester(date): bool
}

class ScheduleDayViewResponse {
  + date: DateTime
  + week: int
  + dayOfWeek: int
  + isSunday: bool
  + isNonWorking: bool
  + nonWorkingTitle: string?
  + practices: List<PracticeResponse>
  + inserts: List<ScheduleInsertResponse>
  + entries: List<ScheduleResponse>
}

class ScheduleWeekViewResponse {
  + week: int
  + weekStart: DateTime
  + days: List<ScheduleDayViewResponse>
}

class ScheduleSemesterWeekResponse {
  + week: int
  + weekStart: DateTime
  + days: List<ScheduleDayViewResponse>
}

class ScheduleSemesterViewResponse {
  + totalWeeks: int
  + weeks: List<ScheduleSemesterWeekResponse>
}

class ScheduleMonthDayResponse {
  + date: DateTime
  + dayOfWeek: int
  + isSunday: bool
  + isNonWorking: bool
  + nonWorkingTitle: string?
  + practiceKinds: List<PracticeKind>
  + isOutOfSemester: bool
  + pairCount: int
}

class ScheduleMonthViewResponse {
  + year: int
  + month: int
  + days: List<ScheduleMonthDayResponse>
}

interface IBellScheduleService {
  + GetTimeMapAsync(ct): Task<Dictionary<int,(TimeSpan,TimeSpan)>>
}

interface IPracticeService {
  + GetAllAsync(groupId?, teacherId?, kind?, from?, to?, page?, pageSize?, ct): Result<PagedResponse<PracticeResponse>>
}

interface IScheduleInsertService {
  + GetAllAsync(dayOfWeek?, course?, activeOnly, ct): Result<List<ScheduleInsertResponse>>
}

interface IScheduleService {
  + GetAllAsync(groupId?, teacherId?, room?, dayOfWeek?, period?, week?, date?, view?, page?, pageSize?, ct): Result<PagedResponse<ScheduleResponse>>
}

class ScheduleController {
  - service: IScheduleService
  - importService: ScheduleImportService
  - viewService: IScheduleViewService
  + GetAll(groupId?, teacherId?, room?, dayOfWeek?, period?, week?, date?, month?, view?, page?, pageSize?, ct): ActionResult
  + Export(scope?, date?, week?, groupId?, teacherId?, room?, format, layout, ct): ActionResult
  - ToResponse<T>(result): IActionResult
}

class ScheduleExportService {
  - db: AppDbContext
  - bells: IBellScheduleService
  - views: IScheduleViewService
  + ExportAsync(groupId?, teacherId?, room?, scope?, date?, week?, format, layout, ct): Result<ExportResult>
  - ExportDayViewAsync(groupId?, teacherId?, room?, date?, format, layout, ct): Result<ExportResult>
  - ExportWeekViewAsync(groupId?, teacherId?, room?, week?, date?, format, layout, ct): Result<ExportResult>
  - ExportSemesterAsync(groupId?, teacherId?, format, ct): Result<ExportResult>
  - ExportLegacyAsync(groupId?, teacherId?, room?, format, layout, ct): Result<ExportResult>
  - BuildFileName(prefix, extension): string
}

class AppDbContext {
  + NonWorkingDays: DbSet<NonWorkingDay>
  + Practices: DbSet<Practice>
  + ScheduleInserts: DbSet<ScheduleInsert>
  + ScheduleEntries: DbSet<ScheduleEntry>
  + ScheduleHistory: DbSet<ScheduleHistory>
  + Groups: DbSet<Group>
}

class NonWorkingDay {
  + dateFrom: DateTime
  + dateTo: DateTime
  + title: string
}

class ScheduleEntry {
  + dayOfWeek: DayOfWeek
  + numberPair: int
  + weeks: List<int>
}

class ScheduleHistory {
  + changeType: ScheduleChangeType
  + week: int
  + numberPair: int
}

IScheduleViewService <|.. ScheduleViewService
ScheduleController --> IScheduleViewService : view=day|week|semester|calendar
ScheduleController --> IScheduleService : view не задан/неизвестен — paged-список
ScheduleExportService --> IScheduleViewService : scope=day|week
ScheduleExportService --> IBellScheduleService : время пар в легаси- и семестровом экспорте

ScheduleViewService --> AppDbContext : NonWorkingDays, ScheduleEntries, Groups
ScheduleViewService --> IBellScheduleService : GetTimeMapAsync
ScheduleViewService --> IPracticeService : GetAllAsync
ScheduleViewService --> IScheduleInsertService : GetAllAsync (activeOnly)
ScheduleViewService --> ScheduleChangeTags : BuildAsync
ScheduleViewService ..> StudyWeek : недели 1…16, Пн–Сб
ScheduleViewService ..> ScheduleDayViewResponse : создаёт
ScheduleWeekViewResponse "1" *-- "6" ScheduleDayViewResponse : days Пн–Сб
ScheduleSemesterViewResponse "1" *-- "*" ScheduleSemesterWeekResponse : weeks
ScheduleSemesterWeekResponse "1" *-- "6" ScheduleDayViewResponse : days Пн–Сб
ScheduleMonthViewResponse "1" *-- "*" ScheduleMonthDayResponse : days месяца

AppDbContext --> NonWorkingDay
AppDbContext --> ScheduleEntry
AppDbContext --> ScheduleHistory
ScheduleChangeTags ..> ScheduleHistory : бейджи корректировок

@enduml
